<resources>
    <string name="app_name">cargocity</string>
    <string name="action_settings">Settings</string>
    <string name="companyurl">www.cargoexchange.in</string>
    <string name="title_activity_delivery_feedback">DeliveryFeedbackActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="orderno">Order No:-</string>
    <string name="name">Name:-</string>
    <string name="address">Address:-</string>
    <string name="city">City:-</string>
    <string name="items">Items:-</string>
    <string name="enter_route_id">Enter Route Id:</string>

    <string name="start_trip">Start Trip</string>
    <string name="show_directions">Directions</string>
    <string name="end_trip">End Trip</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="route_id">Route ID:</string>
    <string name="route_name">Route Name:</string>
    <string name="vehicle_number">Vehicle Number:</string>
    <string name="driver_name">Driver name:</string>
    <string name="no_of_orders">No Of Orders Assigned:</string>
    <string name="title_activity_signature">Customer Signature</string>
</resources>
