<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context="com.cargoexchange.cargocity.cargocity.fragments.RouteDetails">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_id"
            android:textColor="#dd4f53"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/routeid_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="RELIANCEDCHD21012016_1"
            android:textSize="19sp"/>

        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/route_name"
            android:textColor="#dd4f53"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/routename_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ALWAL"
            android:textSize="19sp"/>

        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vehicle_number"
            android:textColor="#dd4f53"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/vehiclenumber_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AP28AA5678"
            android:textSize="19sp"/>

        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_name"
            android:textColor="#dd4f53"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/drivername_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HARIKRISHNA"
            android:textSize="19sp"/>

        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_of_orders"
            android:textColor="#dd4f53"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/numberoforder_textview"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="10"
            android:textSize="19sp"/>

        <View
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <Button
            android:id="@+id/proceed_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="OK"
            android:textSize="25sp"
            android:scaleX="2"
            android:theme="@style/Button.Branded"

            />
    </LinearLayout>

</FrameLayout>
