<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/orderdetailscardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginTop="10dp"
    android:background="@android:color/darker_gray"
    android:foregroundGravity="center"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp"
    app:contentPadding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ordernotextview"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/orderno"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/ordernoedittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="17dp" />

            <RelativeLayout
                android:id="@+id/orderstatuslayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right">
                <ImageButton
                    android:id="@+id/orderstatusimage"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:src="@drawable/ic_play_circle_outline" />
            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nametext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/name"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/nameedittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/addresstext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/address"
                android:textSize="17dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Line1addressedittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="true"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/Localityaddressedittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="true"
                    android:textSize="17dp" />

                <TextView
                    android:id="@+id/Landmarkaddressedittext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:textAllCaps="true"
                    android:textSize="17dp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/citytext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/city"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/cityedittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:textSize="17dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemtext"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="right"
                android:text="@string/items"
                android:textSize="17dp" />

            <TextView
                android:id="@+id/itemedittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:textAllCaps="true"
                android:textSize="17dp" />

        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>
